@@ -25,6 +25,9 @@
 	Support new cerebrod_search_dir_for_module interface.
 
 	* man/cerebrod.8.in: First draft.
+
+	* config/ac_genders.m4, config/ac_gendersllnl.m4: Add manpage
+	substitution flags.
 	
 2005-03-18  Albert Chu  <chu11@llnl.gov>
 
